tests/types/errors/compound_arithmetic_result_unassignable.mog
var total i64 = 10i64
total += 1.5
